--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
+    "@heroicons/react": "^1.0.6",
+    "autoprefixer": "^10.4.7",
+    "bootstrap": "^5.1.3",
     "next": "12.1.6",
+    "postcss": "^8.4.14",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
+    "react-scroll": "^1.8.7",
+    "react-spring": "^9.4.5",
+    "tailwindcss": "^3.1.3"
   },
   "devDependencies": {
     "eslint": "8.17.0",
