--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-markdown": "^8.0.3",
     "react-scroll": "^1.8.7",
     "react-spring": "^9.4.5",
+    "react-use": "^17.4.0",
     "tailwindcss": "^3.1.3"
   },
   "devDependencies": {
